--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -58,7 +58,7 @@
         "    sys.path.append(\"/content/finding-gender-direction\")\n",
         "else:\n",
         "    #use your own PATH\n",
-        "    PATH = None\n",
+        "    PATH = \"C:\\\\Users\\léo\\Desktop\\Travail\\Informatique\\GitHub\"\n",
         "    sys.path.append(PATH)\n",
         "\n",
         "from finding_gender_direction.hyperplane_computation import utils\n",
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -150,10 +150,62 @@
         "id": "OIvcpZarXjrc",
         "outputId": "4d511913-efab-4941-c3a7-9e8372ec5d20"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Downloading (…)olve/main/vocab.json: 100%|██████████| 1.04M/1.04M [00:00<00:00, 2.85MB/s]\n",
+            "C:\\Users\\léo\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\huggingface_hub\\file_download.py:133: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\léo\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+            "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+            "  warnings.warn(message)\n",
+            "Downloading (…)olve/main/merges.txt: 100%|██████████| 456k/456k [00:00<00:00, 1.65MB/s]\n",
+            "Downloading (…)/main/tokenizer.json: 100%|██████████| 1.36M/1.36M [00:00<00:00, 5.42MB/s]\n",
+            "Downloading (…)lve/main/config.json: 100%|██████████| 665/665 [00:00<00:00, 332kB/s]\n",
+            "Downloading model.safetensors: 100%|██████████| 548M/548M [01:11<00:00, 7.64MB/s] \n",
+            "Downloading (…)neration_config.json: 100%|██████████| 124/124 [00:00<?, ?B/s] \n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "GPT2LMHeadModel(\n",
+              "  (transformer): GPT2Model(\n",
+              "    (wte): Embedding(50257, 768)\n",
+              "    (wpe): Embedding(1024, 768)\n",
+              "    (drop): Dropout(p=0.1, inplace=False)\n",
+              "    (h): ModuleList(\n",
+              "      (0-11): 12 x GPT2Block(\n",
+              "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+              "        (attn): GPT2Attention(\n",
+              "          (c_attn): Conv1D()\n",
+              "          (c_proj): Conv1D()\n",
+              "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
+              "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
+              "        )\n",
+              "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+              "        (mlp): GPT2MLP(\n",
+              "          (c_fc): Conv1D()\n",
+              "          (c_proj): Conv1D()\n",
+              "          (act): NewGELUActivation()\n",
+              "          (dropout): Dropout(p=0.1, inplace=False)\n",
+              "        )\n",
+              "      )\n",
+              "    )\n",
+              "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+              "  )\n",
+              "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
+              ")"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#when debugging, use gpt2 to be faster\n",
-        "debugging = False\n",
+        "debugging = True\n",
         "torch.set_grad_enabled(False)\n",
         "\n",
         "if debugging:\n",
@@ -168,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "cd3z40IMPG_R"
       },
@@ -180,6 +232,7 @@
         "    device = torch.device('cpu')\n",
         "\n",
         "model.to(device)\n",
+        "tokenizer.pad_token = tokenizer.eos_token\n",
         "\n",
         "dict = {\n",
         "    'device': device,\n",
@@ -197,11 +250,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\léo\\AppData\\Local\\Temp\\ipykernel_15144\\649448453.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+            "  Learn = D[D['train'] != 0][D['data_lbl'] != 'name'].loc[:, ['examples', 'gender', 'data_lbl']].values.tolist()\n",
+            "C:\\Users\\léo\\AppData\\Local\\Temp\\ipykernel_15144\\649448453.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+            "  Test_name = D[D['train'] == 0][D['data_lbl'] == 'name'].loc[:, ['examples', 'gender']].values.tolist()\n"
+          ]
+        }
+      ],
       "source": [
-        "D = pd.read_csv(\"finding_gender_direction/Data/Train_Data.csv\")\n",
+        "D = pd.read_csv(\"Data/Train_Data.csv\")\n",
         "\n",
         "Train = D[D['train'] == 1].loc[:, ['examples', 'gender']].values.tolist()\n",
         "Test = D[D['train'] == 0].loc[:, ['examples', 'gender']].values.tolist()\n",
@@ -223,11 +287,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
-        "Test = pd.read_csv(\"Test_Data.csv\")\n",
+        "Test = pd.read_csv(\"Data/Test_Data.csv\")\n",
         "\n",
         "example_prompts_A = list(Test[Test['data_num'] == 'a']['question'])\n",
         "example_prompts_B = list(Test[Test['data_num'] == 'b']['question'])\n",
@@ -242,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -282,6 +346,15 @@
         "The number is the Data number (1 = words, 2 = names). By default they are learnt after the layer norm of the attention module, but $res$ means the direction is learnt in the residual stream directly. In this case, we don't learn the Logistic Regression because it diverges (This could be fixed but is unimportant).\\\n",
         "\\\n",
         "We can learn on the full dataset, or only on a subset: for the full, use $Data$, otherwise $Train$. For the second dataset, we want to use $Train_2$ because $Test_2 = Data_2-Train_2$. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from finding_gender_direction.hyperplane_computation import store_test_hyperplane"
       ]
     },
     {
