--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -52,18 +52,26 @@
         "id": "xaN_GiUSr--I",
         "outputId": "9a4888cb-e1f6-48ce-b5d2-cc90c5c0ecdd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/leodana/anaconda3/envs/leo_env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "if in_colab:\n",
         "    sys.path.append(\"/content/finding-gender-direction\")\n",
         "else:\n",
-        "    #use your own PATH\n",
-        "    PATH = \"C:\\\\Users\\léo\\Desktop\\Travail\\Informatique\\GitHub\"\n",
+        "    PATH = \"/finding_gender_direction/\"\n",
         "    sys.path.append(PATH)\n",
         "\n",
-        "from finding_gender_direction.hyperplane_computation import utils\n",
-        "from finding_gender_direction.hyperplane_computation import inference_time_modification\n",
-        "from finding_gender_direction.hyperplane_computation import store_test_hyperplane\n",
+        "from hyperplane_computation import utils\n",
+        "from hyperplane_computation import inference_time_modification\n",
+        "from hyperplane_computation import store_test_hyperplane\n",
         "\n",
         "import pandas as pd\n",
         "import torch\n",
@@ -74,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -155,15 +163,12 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Downloading (…)olve/main/vocab.json: 100%|██████████| 1.04M/1.04M [00:00<00:00, 2.85MB/s]\n",
-            "C:\\Users\\léo\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\huggingface_hub\\file_download.py:133: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\léo\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-            "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-            "  warnings.warn(message)\n",
-            "Downloading (…)olve/main/merges.txt: 100%|██████████| 456k/456k [00:00<00:00, 1.65MB/s]\n",
-            "Downloading (…)/main/tokenizer.json: 100%|██████████| 1.36M/1.36M [00:00<00:00, 5.42MB/s]\n",
-            "Downloading (…)lve/main/config.json: 100%|██████████| 665/665 [00:00<00:00, 332kB/s]\n",
-            "Downloading model.safetensors: 100%|██████████| 548M/548M [01:11<00:00, 7.64MB/s] \n",
-            "Downloading (…)neration_config.json: 100%|██████████| 124/124 [00:00<?, ?B/s] \n"
+            "Downloading (…)olve/main/vocab.json: 100%|██████████| 1.04M/1.04M [00:00<00:00, 11.6MB/s]\n",
+            "Downloading (…)olve/main/merges.txt: 100%|██████████| 456k/456k [00:00<00:00, 58.4MB/s]\n",
+            "Downloading (…)/main/tokenizer.json: 100%|██████████| 1.36M/1.36M [00:00<00:00, 44.6MB/s]\n",
+            "Downloading (…)lve/main/config.json: 100%|██████████| 665/665 [00:00<00:00, 1.58MB/s]\n",
+            "Downloading model.safetensors: 100%|██████████| 548M/548M [00:08<00:00, 61.4MB/s] \n",
+            "Downloading (…)neration_config.json: 100%|██████████| 124/124 [00:00<00:00, 305kB/s]\n"
           ]
         },
         {
@@ -198,7 +203,7 @@
               ")"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -220,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 9,
       "metadata": {
         "id": "cd3z40IMPG_R"
       },
@@ -250,16 +255,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\léo\\AppData\\Local\\Temp\\ipykernel_15144\\649448453.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+            "/var/folders/f2/z269ddw93kgfsjllcq_m60240000gn/T/ipykernel_28420/649448453.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
             "  Learn = D[D['train'] != 0][D['data_lbl'] != 'name'].loc[:, ['examples', 'gender', 'data_lbl']].values.tolist()\n",
-            "C:\\Users\\léo\\AppData\\Local\\Temp\\ipykernel_15144\\649448453.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+            "/var/folders/f2/z269ddw93kgfsjllcq_m60240000gn/T/ipykernel_28420/649448453.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
             "  Test_name = D[D['train'] == 0][D['data_lbl'] == 'name'].loc[:, ['examples', 'gender']].values.tolist()\n"
           ]
         }
@@ -287,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -306,7 +311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -350,16 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from finding_gender_direction.hyperplane_computation import store_test_hyperplane"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -367,7 +363,33 @@
         "id": "CD2iAA7qD1JP",
         "outputId": "f47b4321-82b4-4b6d-aea5-214b5a245ce3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "  0%|          | 0/12 [00:00<?, ?it/s]\n"
+          ]
+        },
+        {
+          "ename": "ValueError",
+          "evalue": "y should be a 1d array, got an array of shape (2848, 4) instead.",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[1;32m/Users/leodana/finding_gender_direction/exp_notebook.ipynb Cellule 14\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Learn the estimators on the attention\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m eraser_mean, eraser_quantile, eraser_probe \u001b[39m=\u001b[39m store_test_hyperplane\u001b[39m.\u001b[39;49mstoring_hyperplanes(Learn, post_layer_norm \u001b[39m=\u001b[39;49m \u001b[39mTrue\u001b[39;49;00m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39mdict\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X20sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Learning the estimators in the residual stream\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X20sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m eraser_mean_res, eraser_quantile_res, _ \u001b[39m=\u001b[39m store_test_hyperplane\u001b[39m.\u001b[39mstoring_hyperplanes(Learn, post_layer_norm \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39mdict\u001b[39m)\n",
+            "File \u001b[0;32m~/finding_gender_direction/hyperplane_computation/store_test_hyperplane.py:104\u001b[0m, in \u001b[0;36mstoring_hyperplanes\u001b[0;34m(dataset, post_layer_norm, **dict)\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[39m#We learn the best LogisticRegression, we need at least 1500 steps to converge\u001b[39;00m\n\u001b[1;32m    101\u001b[0m \u001b[39mif\u001b[39;00m post_layer_norm:\n\u001b[1;32m    102\u001b[0m   \u001b[39m#probe_labels = transform_label(all_labels)\u001b[39;00m\n\u001b[0;32m--> 104\u001b[0m   probe \u001b[39m=\u001b[39m LogisticRegression(random_state\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m, max_iter\u001b[39m=\u001b[39;49m\u001b[39m2000\u001b[39;49m, multi_class\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mmultinomial\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mfit(\n\u001b[1;32m    105\u001b[0m           all_target_act\u001b[39m.\u001b[39;49mto(\u001b[39m'\u001b[39;49m\u001b[39mcpu\u001b[39;49m\u001b[39m'\u001b[39;49m),\n\u001b[1;32m    106\u001b[0m           all_labels\u001b[39m.\u001b[39;49mto(\u001b[39m'\u001b[39;49m\u001b[39mcpu\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m    107\u001b[0m           )\n\u001b[1;32m    109\u001b[0m   eraser_probe\u001b[39m.\u001b[39mappend(leace\u001b[39m.\u001b[39mLeaceEraser(\n\u001b[1;32m    110\u001b[0m       proj_right \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mTensor(probe\u001b[39m.\u001b[39mcoef_),\n\u001b[1;32m    111\u001b[0m       proj_left \u001b[39m=\u001b[39m ((torch\u001b[39m.\u001b[39mTensor(probe\u001b[39m.\u001b[39mcoef_)\u001b[39m/\u001b[39m(torch\u001b[39m.\u001b[39mnorm(torch\u001b[39m.\u001b[39mTensor(probe\u001b[39m.\u001b[39mcoef_), dim \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m)\u001b[39m.\u001b[39munsqueeze(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m))\u001b[39m.\u001b[39mT),\n\u001b[1;32m    112\u001b[0m       bias \u001b[39m=\u001b[39m \u001b[39m-\u001b[39mprobe\u001b[39m.\u001b[39mintercept_[\u001b[39m0\u001b[39m]\u001b[39m*\u001b[39m(torch\u001b[39m.\u001b[39mTensor(probe\u001b[39m.\u001b[39mcoef_)\u001b[39m/\u001b[39m(torch\u001b[39m.\u001b[39mnorm(torch\u001b[39m.\u001b[39mTensor(probe\u001b[39m.\u001b[39mcoef_), dim \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39munsqueeze(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m)),\n\u001b[1;32m    113\u001b[0m   ))\n\u001b[1;32m    114\u001b[0m   eraser_probe[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mto(device)\n",
+            "File \u001b[0;32m~/anaconda3/envs/leo_env/lib/python3.11/site-packages/sklearn/base.py:1152\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[0;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1145\u001b[0m     estimator\u001b[39m.\u001b[39m_validate_params()\n\u001b[1;32m   1147\u001b[0m \u001b[39mwith\u001b[39;00m config_context(\n\u001b[1;32m   1148\u001b[0m     skip_parameter_validation\u001b[39m=\u001b[39m(\n\u001b[1;32m   1149\u001b[0m         prefer_skip_nested_validation \u001b[39mor\u001b[39;00m global_skip_validation\n\u001b[1;32m   1150\u001b[0m     )\n\u001b[1;32m   1151\u001b[0m ):\n\u001b[0;32m-> 1152\u001b[0m     \u001b[39mreturn\u001b[39;00m fit_method(estimator, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+            "File \u001b[0;32m~/anaconda3/envs/leo_env/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:1208\u001b[0m, in \u001b[0;36mLogisticRegression.fit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m   1205\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1206\u001b[0m     _dtype \u001b[39m=\u001b[39m [np\u001b[39m.\u001b[39mfloat64, np\u001b[39m.\u001b[39mfloat32]\n\u001b[0;32m-> 1208\u001b[0m X, y \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(\n\u001b[1;32m   1209\u001b[0m     X,\n\u001b[1;32m   1210\u001b[0m     y,\n\u001b[1;32m   1211\u001b[0m     accept_sparse\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcsr\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m   1212\u001b[0m     dtype\u001b[39m=\u001b[39;49m_dtype,\n\u001b[1;32m   1213\u001b[0m     order\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mC\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m   1214\u001b[0m     accept_large_sparse\u001b[39m=\u001b[39;49msolver \u001b[39mnot\u001b[39;49;00m \u001b[39min\u001b[39;49;00m [\u001b[39m\"\u001b[39;49m\u001b[39mliblinear\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39msag\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39msaga\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[1;32m   1215\u001b[0m )\n\u001b[1;32m   1216\u001b[0m check_classification_targets(y)\n\u001b[1;32m   1217\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_ \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39munique(y)\n",
+            "File \u001b[0;32m~/anaconda3/envs/leo_env/lib/python3.11/site-packages/sklearn/base.py:622\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[0;34m(self, X, y, reset, validate_separately, cast_to_ndarray, **check_params)\u001b[0m\n\u001b[1;32m    620\u001b[0m         y \u001b[39m=\u001b[39m check_array(y, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_y_params)\n\u001b[1;32m    621\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 622\u001b[0m         X, y \u001b[39m=\u001b[39m check_X_y(X, y, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mcheck_params)\n\u001b[1;32m    623\u001b[0m     out \u001b[39m=\u001b[39m X, y\n\u001b[1;32m    625\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m check_params\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mensure_2d\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mTrue\u001b[39;00m):\n",
+            "File \u001b[0;32m~/anaconda3/envs/leo_env/lib/python3.11/site-packages/sklearn/utils/validation.py:1162\u001b[0m, in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, estimator)\u001b[0m\n\u001b[1;32m   1142\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   1143\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mestimator_name\u001b[39m}\u001b[39;00m\u001b[39m requires y to be passed, but the target y is None\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1144\u001b[0m     )\n\u001b[1;32m   1146\u001b[0m X \u001b[39m=\u001b[39m check_array(\n\u001b[1;32m   1147\u001b[0m     X,\n\u001b[1;32m   1148\u001b[0m     accept_sparse\u001b[39m=\u001b[39maccept_sparse,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1159\u001b[0m     input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mX\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   1160\u001b[0m )\n\u001b[0;32m-> 1162\u001b[0m y \u001b[39m=\u001b[39m _check_y(y, multi_output\u001b[39m=\u001b[39;49mmulti_output, y_numeric\u001b[39m=\u001b[39;49my_numeric, estimator\u001b[39m=\u001b[39;49mestimator)\n\u001b[1;32m   1164\u001b[0m check_consistent_length(X, y)\n\u001b[1;32m   1166\u001b[0m \u001b[39mreturn\u001b[39;00m X, y\n",
+            "File \u001b[0;32m~/anaconda3/envs/leo_env/lib/python3.11/site-packages/sklearn/utils/validation.py:1183\u001b[0m, in \u001b[0;36m_check_y\u001b[0;34m(y, multi_output, y_numeric, estimator)\u001b[0m\n\u001b[1;32m   1181\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1182\u001b[0m     estimator_name \u001b[39m=\u001b[39m _check_estimator_name(estimator)\n\u001b[0;32m-> 1183\u001b[0m     y \u001b[39m=\u001b[39m column_or_1d(y, warn\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m   1184\u001b[0m     _assert_all_finite(y, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m, estimator_name\u001b[39m=\u001b[39mestimator_name)\n\u001b[1;32m   1185\u001b[0m     _ensure_no_complex_data(y)\n",
+            "File \u001b[0;32m~/anaconda3/envs/leo_env/lib/python3.11/site-packages/sklearn/utils/validation.py:1244\u001b[0m, in \u001b[0;36mcolumn_or_1d\u001b[0;34m(y, dtype, warn)\u001b[0m\n\u001b[1;32m   1233\u001b[0m         warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m   1234\u001b[0m             (\n\u001b[1;32m   1235\u001b[0m                 \u001b[39m\"\u001b[39m\u001b[39mA column-vector y was passed when a 1d array was\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1240\u001b[0m             stacklevel\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m,\n\u001b[1;32m   1241\u001b[0m         )\n\u001b[1;32m   1242\u001b[0m     \u001b[39mreturn\u001b[39;00m _asarray_with_order(xp\u001b[39m.\u001b[39mreshape(y, (\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,)), order\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mC\u001b[39m\u001b[39m\"\u001b[39m, xp\u001b[39m=\u001b[39mxp)\n\u001b[0;32m-> 1244\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   1245\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39my should be a 1d array, got an array of shape \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m instead.\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(shape)\n\u001b[1;32m   1246\u001b[0m )\n",
+            "\u001b[0;31mValueError\u001b[0m: y should be a 1d array, got an array of shape (2848, 4) instead."
+          ]
+        }
+      ],
       "source": [
         "# Learn the estimators on the attention\n",
         "eraser_mean, eraser_quantile, eraser_probe = store_test_hyperplane.storing_hyperplanes(Learn, post_layer_norm = True, **dict)\n",
@@ -842,7 +864,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.11"
+      "version": "3.11.5"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
