--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -160,18 +160,6 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Downloading (…)olve/main/vocab.json: 100%|██████████| 1.04M/1.04M [00:00<00:00, 11.6MB/s]\n",
-            "Downloading (…)olve/main/merges.txt: 100%|██████████| 456k/456k [00:00<00:00, 58.4MB/s]\n",
-            "Downloading (…)/main/tokenizer.json: 100%|██████████| 1.36M/1.36M [00:00<00:00, 44.6MB/s]\n",
-            "Downloading (…)lve/main/config.json: 100%|██████████| 665/665 [00:00<00:00, 1.58MB/s]\n",
-            "Downloading model.safetensors: 100%|██████████| 548M/548M [00:08<00:00, 61.4MB/s] \n",
-            "Downloading (…)neration_config.json: 100%|██████████| 124/124 [00:00<00:00, 305kB/s]\n"
-          ]
-        },
-        {
           "data": {
             "text/plain": [
               "GPT2LMHeadModel(\n",
@@ -203,7 +191,7 @@
               ")"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -225,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 5,
       "metadata": {
         "id": "cd3z40IMPG_R"
       },
@@ -255,16 +243,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/f2/z269ddw93kgfsjllcq_m60240000gn/T/ipykernel_28420/649448453.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+            "/var/folders/f2/z269ddw93kgfsjllcq_m60240000gn/T/ipykernel_32947/649448453.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
             "  Learn = D[D['train'] != 0][D['data_lbl'] != 'name'].loc[:, ['examples', 'gender', 'data_lbl']].values.tolist()\n",
-            "/var/folders/f2/z269ddw93kgfsjllcq_m60240000gn/T/ipykernel_28420/649448453.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+            "/var/folders/f2/z269ddw93kgfsjllcq_m60240000gn/T/ipykernel_32947/649448453.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
             "  Test_name = D[D['train'] == 0][D['data_lbl'] == 'name'].loc[:, ['examples', 'gender']].values.tolist()\n"
           ]
         }
@@ -279,6 +267,9 @@
         "Learn = D[D['train'] != 0][D['data_lbl'] != 'name'].loc[:, ['examples', 'gender', 'data_lbl']].values.tolist()\n",
         "Test_name = D[D['train'] == 0][D['data_lbl'] == 'name'].loc[:, ['examples', 'gender']].values.tolist()\n",
         "\n",
+        "#Data normalization\n",
+        "Learn = [[data[0], utils.process_labels(data[1], data[2])] for data in Learn]\n",
+        "\n",
         "#batching\n",
         "batch_size = 1024\n",
         "Nb_ex = len(Train)\n",
@@ -292,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -311,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -355,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -363,13 +354,25 @@
         "id": "CD2iAA7qD1JP",
         "outputId": "f47b4321-82b4-4b6d-aea5-214b5a245ce3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+            "To disable this warning, you can either:\n",
+            "\t- Avoid using `tokenizers` before the fork if possible\n",
+            "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+            "100%|██████████| 12/12 [00:24<00:00,  2.05s/it]\n"
+          ]
+        }
+      ],
       "source": [
         "# Learn the estimators on the attention\n",
         "eraser_mean, eraser_quantile, eraser_probe = store_test_hyperplane.storing_hyperplanes(Learn, post_layer_norm = True, **dict)\n",
         "\n",
         "# Learning the estimators in the residual stream\n",
-        "eraser_mean_res, eraser_quantile_res, _ = store_test_hyperplane.storing_hyperplanes(Learn, post_layer_norm = False, **dict)\n"
+        "#eraser_mean_res, eraser_quantile_res, _ = store_test_hyperplane.storing_hyperplanes(Learn, post_layer_norm = False, **dict)\n"
       ]
     },
     {
@@ -381,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -389,11 +392,32 @@
         "id": "xceRSHsVz2YZ",
         "outputId": "234102e1-8224-4f95-e1f4-e1fdfc502fc2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "  0%|          | 0/12 [00:00<?, ?it/s]\n"
+          ]
+        },
+        {
+          "ename": "RuntimeError",
+          "evalue": "The size of tensor a (2848) must match the size of tensor b (4) at non-singleton dimension 1",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[1;32m/Users/leodana/finding_gender_direction/exp_notebook.ipynb Cellule 16\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m metric_m \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39mprobe_eval(eraser_mean, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39mdict\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X21sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m metric_p \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39mprobe_eval(eraser_probe, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39mdict\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X21sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m acc_data \u001b[39m=\u001b[39m store_test_hyperplane\u001b[39m.\u001b[39;49mhyperplane_acc(Learn, [metric_q, metric_m, metric_p], \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39mdict\u001b[39;49m)\n",
+            "File \u001b[0;32m~/finding_gender_direction/hyperplane_computation/store_test_hyperplane.py:103\u001b[0m, in \u001b[0;36mhyperplane_acc\u001b[0;34m(dataset, eval_metric, **dict)\u001b[0m\n\u001b[1;32m    101\u001b[0m   acc \u001b[39m=\u001b[39m []\n\u001b[1;32m    102\u001b[0m   \u001b[39mfor\u001b[39;00m metric \u001b[39min\u001b[39;00m eval_metric:\n\u001b[0;32m--> 103\u001b[0m     acc\u001b[39m.\u001b[39mappend(metric(all_target_acts, layer, all_labels))\n\u001b[1;32m    104\u001b[0m   acc_list\u001b[39m.\u001b[39mappend(acc)\n\u001b[1;32m    106\u001b[0m \u001b[39mdel\u001b[39;00m activations\n",
+            "File \u001b[0;32m~/finding_gender_direction/hyperplane_computation/utils.py:101\u001b[0m, in \u001b[0;36mprobe_eval.<locals>.metric\u001b[0;34m(target_activations, layer, true_label)\u001b[0m\n\u001b[1;32m     98\u001b[0m bias \u001b[39m=\u001b[39m eraser_list[layer]\u001b[39m.\u001b[39mbias\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m     99\u001b[0m Nb_ex \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(target_activations)\n\u001b[0;32m--> 101\u001b[0m acc \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39msum(cosim(\u001b[39mdir\u001b[39;49m, target_activations \u001b[39m-\u001b[39;49m bias)\u001b[39m*\u001b[39;49mtrue_label \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mitem()\u001b[39m/\u001b[39mNb_ex\n\u001b[1;32m    102\u001b[0m \u001b[39mreturn\u001b[39;00m acc\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (2848) must match the size of tensor b (4) at non-singleton dimension 1"
+          ]
+        }
+      ],
       "source": [
-        "metric_q = utils.probe_eval(eraser_quantile)\n",
-        "metric_m = utils.probe_eval(eraser_mean)\n",
-        "metric_p = utils.probe_eval(eraser_probe)\n",
+        "metric_q = utils.probe_eval(eraser_quantile, **dict)\n",
+        "metric_m = utils.probe_eval(eraser_mean, **dict)\n",
+        "metric_p = utils.probe_eval(eraser_probe, **dict)\n",
         "\n",
         "acc_data = store_test_hyperplane.hyperplane_acc(Learn, [metric_q, metric_m, metric_p], **dict)"
       ]
