--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -69,7 +69,7 @@
         "    PATH = \"/finding_gender_direction/\"\n",
         "    sys.path.append(PATH)\n",
         "\n",
-        "from hyperplane_computation import utils\n",
+        "from .hyperplane_computation import utils\n",
         "from hyperplane_computation import inference_time_modification\n",
         "from hyperplane_computation import store_test_hyperplane\n",
         "from Data.type import DataStorage\n",
