--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -543,7 +543,11 @@
         "Learn = dataset.get_ex('learn', multi_dim=True)\n",
         "\n",
         "#Learning the estimators in the residual stream\n",
-        "eraser_mean, eraser_quantile, _ = store_test_hyperplane.storing_hyperplanes(Learn, post_layer_norm=True, learn_probe=False, **dict)\n",
+        "flag = True\n",
+        "if flag:\n",
+        "  eraser_mean, eraser_quantile, _ = store_test_hyperplane.storing_hyperplanes(Learn, post_layer_norm=True, learn_probe=False, **dict)\n",
+        "  flag = False\n",
+        "\n",
         "if res_needed:\n",
         "    eraser_mean_res, eraser_quantile_res, _ = store_test_hyperplane.storing_hyperplanes(Learn, post_layer_norm=False, learn_probe=False, **dict)\n",
         "else:\n",
