Typos noticed by codespell.

--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -279,7 +279,7 @@
       "metadata": {},
       "source": [
         "We load below the test data. It is a batched list containing questions to answer, the gender of the true answer, as well as the target word that is gendered in the question.\\\n",
-        "If the target appears several times in the question, only the last occurence is the target."
+        "If the target appears several times in the question, only the last occurrence is the target."
       ]
     },
     {
@@ -329,7 +329,7 @@
         "              [\"she\", \" she\", \"She\", \" She\",\n",
         "               \"her\", \" her\", \"Her\", \" Her\",\n",
         "               \"female\", \" female\", \"Female\", \" Female\",\n",
-        "               \"daugther\", \" daugther\", \"Daugther\", \" Daugther\",\n",
+        "               \"daughter\", \" daughter\", \"Daughter\", \" Daughter\",\n",
         "               \"mother\", \" mother\", \"Mother\", \" Mother\",\n",
         "               \"girl\", \" girl\", \"girl\", \" girl\",]]\n",
         "token_lists = [tokenizer(text_list).input_ids for text_list in text_lists]\n",
@@ -527,7 +527,7 @@
         "* for each elements in *layer_res_list[exp]*, we apply at the corresponding layer the $\\lambda$-steering in the residual,\n",
         "* for each elements in *layer_list[exp]*, we apply at the corresponding layer the $\\lambda$-steering on the attention,\n",
         "\n",
-        "Let's now discribe the base $\\lambda$-steering method. Given and activation *act* and a d-dimensional plane (plane, diffmean, bias), we have:\n",
+        "Let's now describe the base $\\lambda$-steering method. Given and activation *act* and a d-dimensional plane (plane, diffmean, bias), we have:\n",
         "* $\\bar{act} = act - \\lambda <plane|act-bias> diffmean$\n",
         "\n",
         "Which is a diagonal projection on the plane, continuous on lambda. So, as $\\lambda$ increases from 0 to 1, more concept should be erased. At $\\lambda=1$ we shouldn't have any concept. From 1 to 2, we should swap the concept.\\\n",
@@ -721,7 +721,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# If the code is interupted while a hook is running, this will reset back the model to normal.\n",
+        "# If the code is interrupted while a hook is running, this will reset back the model to normal.\n",
         "for module in model.transformer.h:\n",
         "  module._forward_pre_hooks.clear()\n",
         "  module.attn._forward_pre_hooks.clear()\n",
