--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -318,21 +318,25 @@
       "outputs": [],
       "source": [
         "# list of tokens counted as \"good\" answers for each gender\n",
-        "text_lists = [[\"he\", \" he\", \"He\", \" He\",\n",
-        "                 \"him\", \" him\", \"Him\", \" Him\",\n",
-        "                 \"his\", \" his\", \"His\", \" His\",\n",
-        "                 \"male\", \" male\", \"Male\", \" Male\",\n",
-        "                 \"son\", \" son\", \"Son\", \" Son\",\n",
-        "                 \"father\", \" father\", \"Father\", \" Father\",\n",
-        "                 \"boy\", \" boy\", \"Boy\", \" Boy\",\n",
-        "                 ],\n",
-        "              [\"she\", \" she\", \"She\", \" She\",\n",
-        "               \"her\", \" her\", \"Her\", \" Her\",\n",
-        "               \"female\", \" female\", \"Female\", \" Female\",\n",
-        "               \"daughter\", \" daughter\", \"Daughter\", \" Daughter\",\n",
-        "               \"mother\", \" mother\", \"Mother\", \" Mother\",\n",
-        "               \"girl\", \" girl\", \"girl\", \" girl\",]]\n",
+        "\n",
+        "male_words = [\"he\", \"him\", \"his\", \"male\", \"son\", \"father\", \"boy\"]\n",
+        "female_words = [\"she\", \"her\", \"female\", \"daughter\", \"mother\", \"girl\"]\n",
+        "\n",
+        "# Create alternative tokens with upper case and space.\n",
+        "text_lists = [[],[]]\n",
+        "for m_word, f_word in zip(male_words, female_words):\n",
+        "    text_lists[0].append(m_word)\n",
+        "    text_lists[0].append(m_word[0].upper()+m_word[0:])\n",
+        "    text_lists[0].append(\" \"+m_word)\n",
+        "    text_lists[0].append(\" \"+m_word[0].upper()+m_word[0:])\n",
+        "    text_lists[1].append(f_word)\n",
+        "    text_lists[1].append(f_word[0].upper()+f_word[0:])\n",
+        "    text_lists[1].append(\" \"+f_word)\n",
+        "    text_lists[1].append(\" \"+f_word[0].upper()+f_word[0:])\n",
+        "\n",
         "token_lists = [tokenizer(text_list).input_ids for text_list in text_lists]\n",
+        "\n",
+        "# Reduce to only one token.\n",
         "token_lists = [[[token[0]] for token in token_lists[0]], [[token[0]] for token in token_lists[1]]]"
       ]
     },
