--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -262,9 +262,9 @@
         "train_test_ratio = 0.85\n",
         "\n",
         "if in_colab:\n",
-        "    D = pd.read_csv(\"finding_gender_direction/Data/Train_Data.csv\")\n",
+        "    D = pd.read_csv(\"finding_gender_direction/Data/Train_Data_v1.csv\")\n",
         "else:\n",
-        "    D = pd.read_csv(\"Data/Train_Data.csv\")\n",
+        "    D = pd.read_csv(\"Data/Train_Data_v1.csv\")\n",
         "\n",
         "dataset = DataStorage(\n",
         "    D,\n",
@@ -768,9 +768,7 @@
       "metadata": {},
       "source": [
         "We test here the modification of the sentence at inference time. \\\n",
-        "Given a sentence, and words to intervene on, we look at continutations to see if there is any effect or not. \\\n",
-        "\\\n",
-        "WORK IN PROGRESS"
+        "Given a sentence, and words to intervene on, we look at continutations to see if there is any effect or not. \\"
       ]
     },
     {
@@ -791,7 +789,7 @@
         "nb_layers = len(model.transformer.h)\n",
         "layer_list = [[i for i in range(0, nb_layers)]]\n",
         "layer_res_list = [[]]\n",
-        "lbds = t.tensor([i/10 for i in range(0, 41, 1)], dtype=t.float32)\n",
+        "lbds = t.tensor([i/10 for i in range(0, 41, 1)], dtype=t.float)\n",
         "\n",
         "res_needed = len(layer_res_list[0]) > 0\n",
         "\n",
