--- a/exp_notebook.ipynb
+++ b/exp_notebook.ipynb
@@ -74,7 +74,7 @@
         "\n",
         "from hyperplane_computation import utils\n",
         "from hyperplane_computation.inference_time_modif import score\n",
-        "from hyperplane_computation import store_test_hyperplane\n",
+        "from hyperplane_computation.store_test_hyperplane import hyperplane_acc, storing_hyperplanes\n",
         "from hyperplane_computation.continuation import continuate\n",
         "from Data.data_type import DataStorage\n",
         "\n",
@@ -381,8 +381,8 @@
             "To disable this warning, you can either:\n",
             "\t- Avoid using `tokenizers` before the fork if possible\n",
             "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-            "100%|██████████| 12/12 [00:37<00:00,  3.11s/it]\n",
-            "100%|██████████| 12/12 [00:28<00:00,  2.34s/it]\n"
+            "100%|██████████| 12/12 [00:42<00:00,  3.52s/it]\n",
+            "100%|██████████| 12/12 [00:32<00:00,  2.75s/it]\n"
           ]
         }
       ],
@@ -390,12 +390,12 @@
         "Learn = dataset.get_ex('learn', multi_dim=False)\n",
         "\n",
         "# Learn the estimators on the attention\n",
-        "eraser_mean, eraser_quantile, eraser_probe = store_test_hyperplane.storing_hyperplanes(Learn, post_layer_norm=True, learn_probe=True, **dict)\n",
+        "eraser_mean, eraser_quantile, eraser_probe = storing_hyperplanes(Learn, post_layer_norm=True, learn_probe=True, **dict)\n",
         "\n",
         "Train = dataset.get_ex('train', multi_dim=False)\n",
         "\n",
         "# Learn the estimators on the attention\n",
-        "eraser_mean_train, eraser_quantile_train, eraser_probe_train = store_test_hyperplane.storing_hyperplanes(Train, post_layer_norm=True, learn_probe=True, **dict)\n"
+        "eraser_mean_train, eraser_quantile_train, eraser_probe_train = storing_hyperplanes(Train, post_layer_norm=True, learn_probe=True, **dict)\n"
       ]
     },
     {
@@ -413,8 +413,8 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 12/12 [00:26<00:00,  2.20s/it]\n",
-            "100%|██████████| 12/12 [00:04<00:00,  2.68it/s]\n"
+            "100%|██████████| 12/12 [00:27<00:00,  2.27s/it]\n",
+            "100%|██████████| 12/12 [00:04<00:00,  2.55it/s]\n"
           ]
         }
       ],
@@ -423,7 +423,7 @@
         "metric_m = utils.probe_eval(eraser_mean, **dict)\n",
         "metric_p = utils.probe_eval(eraser_probe, **dict)\n",
         "\n",
-        "acc_data_1 = store_test_hyperplane.hyperplane_acc(Learn, [metric_q, metric_m, metric_p], **dict)\n",
+        "acc_data_1 = hyperplane_acc(Learn, [metric_q, metric_m, metric_p], **dict)\n",
         "\n",
         "Test = dataset.get_ex('test', multi_dim=False)\n",
         "\n",
@@ -431,7 +431,7 @@
         "metric_m = utils.probe_eval(eraser_mean_train, **dict)\n",
         "metric_p = utils.probe_eval(eraser_probe_train, **dict)\n",
         "\n",
-        "acc_data_2 = store_test_hyperplane.hyperplane_acc(Test, [metric_q, metric_m, metric_p], **dict)"
+        "acc_data_2 = hyperplane_acc(Test, [metric_q, metric_m, metric_p], **dict)"
       ]
     },
     {
@@ -565,7 +565,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 12/12 [00:26<00:00,  2.24s/it]\n"
+            "100%|██████████| 12/12 [00:27<00:00,  2.29s/it]\n"
           ]
         }
       ],
@@ -575,11 +575,11 @@
         "# Learning the estimators in the residual stream\n",
         "flag = True\n",
         "if flag:\n",
-        "  eraser_mean, eraser_quantile, _ = store_test_hyperplane.storing_hyperplanes(Learn, post_layer_norm=True, learn_probe=False, **dict)\n",
+        "  eraser_mean, eraser_quantile, _ = storing_hyperplanes(Learn, post_layer_norm=True, learn_probe=False, **dict)\n",
         "  flag = False\n",
         "\n",
         "if res_needed:\n",
-        "    eraser_mean_res, eraser_quantile_res, _ = store_test_hyperplane.storing_hyperplanes(Learn, post_layer_norm=False, learn_probe=False, **dict)\n",
+        "    eraser_mean_res, eraser_quantile_res, _ = storing_hyperplanes(Learn, post_layer_norm=False, learn_probe=False, **dict)\n",
         "else:\n",
         "    eraser_mean_res, eraser_quantile_res = None, None"
       ]
@@ -606,7 +606,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 41/41 [00:43<00:00,  1.05s/it]\n"
+            "  0%|          | 0/41 [00:00<?, ?it/s]"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 41/41 [00:45<00:00,  1.11s/it]\n"
           ]
         },
         {
@@ -620,7 +627,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 41/41 [00:35<00:00,  1.15it/s]\n"
+            "100%|██████████| 41/41 [00:38<00:00,  1.07it/s]\n"
           ]
         },
         {
@@ -634,7 +641,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 41/41 [00:35<00:00,  1.17it/s]\n"
+            "100%|██████████| 41/41 [00:36<00:00,  1.13it/s]\n"
           ]
         },
         {
@@ -648,7 +655,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 41/41 [00:42<00:00,  1.03s/it]\n"
+            "100%|██████████| 41/41 [00:44<00:00,  1.10s/it]\n"
           ]
         }
       ],
@@ -755,10 +762,14 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 12/12 [00:28<00:00,  2.40s/it]\n"
+          "ename": "NameError",
+          "evalue": "name 'store_test_hyperplane' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m/Users/leodana/finding_gender_direction/exp_notebook.ipynb Cellule 31\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X42sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m flag \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X42sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mif\u001b[39;00m flag:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X42sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m   eraser_mean, eraser_quantile, _ \u001b[39m=\u001b[39m store_test_hyperplane\u001b[39m.\u001b[39mstoring_hyperplanes(Learn, post_layer_norm\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, learn_probe\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39mdict\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X42sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m   flag \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/leodana/finding_gender_direction/exp_notebook.ipynb#X42sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mif\u001b[39;00m res_needed:\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'store_test_hyperplane' is not defined"
           ]
         }
       ],
@@ -787,7 +798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
